--- a/src/App/app.module.scss
+++ b/src/App/app.module.scss
@@ -1,12 +1,14 @@
-
 body {
-    width: 960px;
-    height: auto;
-    background-color: #F3F7FA;
-    margin: 0 auto;
-    font-family: Open Sans, Arial, sans-serif;
+  width: 960px;
+  height: auto;
+  background-color: #f3f7fa;
+  margin: 0 auto;
+  font-family:
+    Open Sans,
+    Arial,
+    sans-serif;
 }
 .app {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
