--- a/src/Filter/filter.module.scss
+++ b/src/Filter/filter.module.scss
@@ -1,53 +1,52 @@
 .filter {
-    width: 232px;
-    height: 270px;
-    background-color: #fff;
-    border-radius: 5px;
-    margin-left: 103px;
-    cursor: pointer;
+  width: 232px;
+  height: 270px;
+  background-color: #fff;
+  border-radius: 5px;
+  margin-left: 103px;
+  cursor: pointer;
 }
 
 .title {
-    padding: 20px 20px 0 20px;
-    font-size: 12px;
+  padding: 20px 20px 0 20px;
+  font-size: 12px;
 }
 
 .checkbox {
-    display: flex;
-    padding: 10px;
-    font-size: 13px;
-    align-items: center;
-    gap: 5px;
+  display: flex;
+  padding: 10px;
+  font-size: 13px;
+  align-items: center;
+  gap: 5px;
 }
 
-input[type="checkbox"] {
-    cursor: pointer;
+input[type='checkbox'] {
+  cursor: pointer;
 }
 
 .customcheckbox {
-    width: 20px;
-    height: 20px;
-    appearance: none; /* Убираем стандартное оформление */
-    background-color: white; /* Белый фон внутри */
-    border: 1px solid #2196F3; /* Чёрная рамка */
-    border-radius: 4px;
-    cursor: pointer;
-    position: relative;
-  }
-  
-  .customcheckbox:checked {
-    background-color: white; /* Белый фон остаётся */
-    border: 1px solid #2196F3;
-  }
-  
-  .customcheckbox:checked::after {
-    content: "✓"; /* Галочка */
-    font-size: 14px;
-    font-weight: bold;
-    color: #2196F3;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
+  width: 20px;
+  height: 20px;
+  appearance: none; /* Убираем стандартное оформление */
+  background-color: white; /* Белый фон внутри */
+  border: 1px solid #2196f3; /* Чёрная рамка */
+  border-radius: 4px;
+  cursor: pointer;
+  position: relative;
+}
+
+.customcheckbox:checked {
+  background-color: white; /* Белый фон остаётся */
+  border: 1px solid #2196f3;
+}
+
+.customcheckbox:checked::after {
+  content: '✓'; /* Галочка */
+  font-size: 14px;
+  font-weight: bold;
+  color: #2196f3;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
