--- a/src/Tabs/tabs.module.scss
+++ b/src/Tabs/tabs.module.scss
@@ -1,28 +1,28 @@
 .tabs {
-    border-radius: 10px;
-    box-shadow: 0 5px 20px rgba(0,0,0,.2);
-    display: flex;
-    justify-content: space-around;
-    width: 520px; 
-    height: 50px;
+  border-radius: 10px;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-around;
+  width: 520px;
+  height: 50px;
 }
 .tab {
-    width: 370px;
-    background-color: #fff;
-    border: 1px solid #DFE5EC;
-    cursor: pointer;
+  width: 370px;
+  background-color: #fff;
+  border: 1px solid #dfe5ec;
+  cursor: pointer;
 }
 .tab:first-child {
-    border-bottom-left-radius: 10px;
-    border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
 }
 .tab:last-child {
-    border-bottom-right-radius: 10px;
-    border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
 }
 .active {
-    background-color: #0d9cfb;
-    color: #fff;
-    border: 1px solid #DFE5EC;
-    cursor: pointer;
+  background-color: #0d9cfb;
+  color: #fff;
+  border: 1px solid #dfe5ec;
+  cursor: pointer;
 }
